Overflow bug fixed

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -32,6 +32,7 @@
   main{
     alighn-items: center;
     text-align: center;
+      padding: 4rem 4rem 0 4rem;
 
     .lg-heading{
       line-height: 1;
